2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/common/read_userdata.bash.in
	bash/common/read_groupdata.bash.in: Misc. cleanup. Make us die if we
	can't find some value for one of the variables (we should normally at
	least be able to read the default fallbacks).

	* bash/common/getent_TEST.bash: Rename with a .in suffix, to keep
	things consistent.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* bash/common/functions.bash.in: Added debug_msg(), which is used for
	displaying less-important messages only when the environment has DEBUG
	set.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Cleanup our eselect module to just use
	@SCRIPTDIR@ instead of that other autotools cruft.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* Makefile.am, bash/Makefile.am, bash/auth/Makefile.am,
	bash/common/Makefile.am, eselect/Makefile.am: Update our makefiles to
	use sed instead of those nasty old build scripts.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* tools/subst.bash, tools/get_autoconf_macros.sed: These scripts suck,
	so they're going the way of the dodo.

2006-08-22  Mike Kelly  <pioto@pioto.org>

	* tools/find_substs.bash: Add a script for finding all occurrances of
	@foo@ in the relevant files. A convenience script for the package
	maintainer.

2006-08-21  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.4.1

	* NEWS, configure.ac: Prepare for 0.4.1 release.

	* bash/common/config.bash.in: Fix a bug that caused all scripts to
	fail if we actually found anything in NSSWITCH_CONF, due to a
	misunderstanding on my part of how source works.

2006-08-11  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.4.0

	* NEWS, README: Prepare for 0.4.0 release.

2006-08-11  Mike Kelly  <pioto@pioto.org>

	* bash/db.bash.in, eselect/users.eselect.in: Add a file in DBDIR
	called "userspace". It is populated by db.bash add IFF it doesn't
	exist. Used by the eselect module to determine the proper USERSPACE to
	call {user,group}del.bash with.
