@@ -17,18 +17,19 @@ main() {
 	# Read the command line arguments.
 	local eusers=${1} egroups=${2} pkgname=${3} userspace=${4} root=${5:-/}
 
-	[[ -z "${pkgname}" || -z "${userspace}" ]] \
-		|| die "Script expects 4 arguments: \"new users\"" \
-			"\"new groups\" pkgname userspace"
+	[[ -z "${pkgname}" ]] && die "missing required arg: pkgname"
+	[[ -z "${userspace}" ]] && die "missing required arg: userspace"
 
-	for i in ${egroups} ; do
-		"${SCRIPTDIR}/addgroup.bash" "${i}" "${pkgname}" \
-			"${userspace}" "${root}"
+	for x in ${egroups} ; do
+		"${SCRIPTDIR}/addgroup.bash" "${x}" "${pkgname}" \
+			"${userspace}" "${root}" \
+			|| die "addgroup ${x} failed"
 	done
 
-	for i in ${eusers} ; do
-		"${SCRIPTDIR}/adduser.bash" "${i}" "${pkgname}" \
-			"${userspace}" "${root}"
+	for x in ${eusers} ; do
+		"${SCRIPTDIR}/adduser.bash" "${x}" "${pkgname}" \
+			"${userspace}" "${root}" \
+			|| die "adduser ${x} failed"
 	done
 }
 
@@ -37,5 +38,5 @@ if [[ "${1}" == "--test" ]] ; then
 	exit 0
 fi
 
-main $@
+main "$@"
 # vim: ts=4 :
