@@ -17,9 +17,8 @@ main() {
 	# Read the command line arguments.
 	local eusers=${1} egroups=${2} pkgname=${3} userspace=${4} root=${5:-/}
 
-	[[ -z "${pkgname}" || -z "${userspace}" ]] \
-		|| die "Script expects 4 arguments: \"new users\"" \
-			"\"new groups\" pkgname userspace"
+	[[ -z "${pkgname}" ]] && die "missing required arg: pkgname"
+	[[ -z "${userspace}" ]] && die "missing required arg: userspace"
 
 	"${SCRIPTDIR}/db.bash" del "${pkgname}" "${root}"
 }
@@ -29,5 +28,5 @@ if [[ "${1}" == "--test" ]] ; then
 	exit 0
 fi
 
-main $@
+main "$@"
 # vim: ts=4 :
